--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.7.8",
     "formik": "^2.4.6",
+    "framer-motion": "^11.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
