--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/aos": "^3.0.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
